<resources>
    <string name="app_name">SwifLearn UI</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="taken_on">Taken on</string>
    <string name="taken_by">Taken by</string>
    <string name="class_notes">Class Notes</string>
    <string name="watch_again">Watch Again</string>
    <string name="schedule_a_trail_class">Schedule a Trail Class</string>
    <string name="faqs">FAQs</string>
    <string name="blog">Blog</string>
    <string name="pricing">Pricing</string>
    <string name="explore_courses">Explore Courses</string>
    <string name="practice_tests">Practice Tests</string>
    <string name="your_past_classes">Your Past Classes</string>
    <string name="upcoming_live_classes">Upcoming Live Classes</string>
    <string name="profile">Profile</string>
    <string name="past_classes">Past Classes</string>
    <string name="science">Science</string>
    <string name="english">English</string>
    <string name="maths">Maths</string>
</resources>
