<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:fitsSystemWindows="true"
    android:id="@+id/drawer_layout">


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:defaultNavHost="true"
        app:navGraph="@navigation/nav_main"/>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start|left"
        android:fitsSystemWindows="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="12dp"
            android:paddingEnd="12dp">
            <include layout="@layout/nav_header_layout"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/scheduleTrailClassRb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="14dp"
                    android:paddingEnd="14dp"
                    android:layout_marginBottom="16dp"
                    android:textSize="17sp"
                    android:textColor="@color/radio_button_selector"
                    android:text="@string/schedule_a_trail_class"/>
                <RadioButton
                    android:id="@+id/navUpcomingLiveClassRb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="14dp"
                    android:paddingEnd="14dp"
                    android:layout_marginBottom="16dp"
                    android:textSize="17sp"
                    android:textColor="@color/radio_button_selector"
                    android:text="@string/upcoming_live_classes"/>
                <RadioButton
                    android:id="@+id/navPastClassRb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="14dp"
                    android:paddingEnd="14dp"
                    android:layout_marginBottom="16dp"
                    android:textSize="17sp"
                    android:textColor="@color/radio_button_selector"
                    android:text="@string/your_past_classes"/>
                <RadioButton
                    android:id="@+id/navPracticeTestsRb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="14dp"
                    android:paddingEnd="14dp"
                    android:layout_marginBottom="16dp"
                    android:textSize="17sp"
                    android:textColor="@color/radio_button_selector"
                    android:text="@string/practice_tests"/>
                <RadioButton
                    android:id="@+id/navExploreClassesRb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="14dp"
                    android:paddingEnd="14dp"
                    android:layout_marginBottom="16dp"
                    android:textSize="17sp"
                    android:textColor="@color/radio_button_selector"
                    android:text="@string/explore_courses"/>
                <RadioButton
                    android:id="@+id/navPricingRb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="14dp"
                    android:paddingEnd="14dp"
                    android:layout_marginBottom="16dp"
                    android:textSize="17sp"
                    android:textColor="@color/radio_button_selector"
                    android:text="@string/pricing"/>
                <RadioButton
                    android:id="@+id/navBlogRb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="14dp"
                    android:paddingEnd="14dp"
                    android:layout_marginBottom="16dp"
                    android:textSize="17sp"
                    android:textColor="@color/radio_button_selector"
                    android:text="@string/blog"/>
                <RadioButton
                    android:id="@+id/navFaqsRb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="14dp"
                    android:paddingEnd="14dp"
                    android:textSize="17sp"
                    android:textColor="@color/radio_button_selector"
                    android:text="@string/faqs"/>
            </RadioGroup>
        </LinearLayout>
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>